# playground-rust

./: README.md
equalizer/: Cargo.toml  Makefile  README.md  x86_64-unknown-equalizer.json
equalizer/src/: lib.rs  vga_buffer.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
katutubo/: .pnp.js  Makefile.toml  katutubo.code-workspace  package.json
katutubo/katutubo-app/: Cargo.toml  README.md
katutubo/katutubo-app/src/: lib.rs  package_details.rs  package_list.rs
katutubo/katutubo-app/static/: index.html  style.css
katutubo/src-tauri/: Cargo.toml  tauri.conf.json
others/: jumping_on_the_clouds.rs  repeated_string.rs  sales_by_match.rs  selection_sort.rs  shuffle_50_random_numbers.rs
playground/: Cargo.toml
playground/.cargo/: config.toml
playground/src/: main.rs
proc_macro_workshop/builder/src/: lib.rs
proc_macro_workshop/builder/tests/: 08-unrecognized-attribute.stderr
pse_stock_watcher_cf_wasm/: Cargo.toml
pse_stock_watcher_cf_wasm/tote/: Cargo.toml
pse_stock_watcher_cf_wasm/tote/src/: errors.rs  lib.rs  ohlcv_data.rs
pse_stock_watcher_cf_wasm/tote/src/indicators/: exponential_moving_average.rs  relative_strength_index.rs
pse_stock_watcher_cf_wasm/tote_proxy/: index.js  package.json  wrangler.toml
pse_stock_watcher_cf_wasm/tote_worker/: Cargo.toml  wrangler.toml
pse_stock_watcher_cf_wasm/tote_worker/src/: constants.rs  lib.rs
pse_stock_watcher_cf_wasm/tote_worker/worker/: worker.js
web_server/: Cargo.toml
web_server/src/: main.rs
(+1 files in other folders)
