[package]
name = "tote"
version = "0.1.0"
authors = ["ffimnsr <ffimnsr@gmail.com>"]
edition = "2018"
publish = false
workspace = ".."

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
